--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     /> -->
   </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
